--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,17 +2,36 @@ security:
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
+        App\Entity\User:
+            algorithm: auto
+
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+
+
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        # used to reload user from session & other features (e.g. switch_user)
+        in_database:
+            entity:
+                class: App\Entity\User
+                property: email
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: in_database
+
+            form_login:
+                login_path: security_login
+                check_path: security_login
+                enable_csrf: true
+
+            logout:
+                path: security_logout
+                target: /
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
