--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "symfony/validator": "5.4.*",
         "symfony/web-link": "5.4.*",
         "symfony/yaml": "5.4.*",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "3.3.*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
