--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,17 +21,22 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            pattern: ^/
+            user_checker: App\Security\UserChecker
             lazy: true
             provider: in_database
 
+
             form_login:
-                login_path: security_login
-                check_path: security_login
+                login_path: app_login
+                check_path: app_login
+                default_target_path: tricks_all
+                use_referer: true
                 enable_csrf: true
 
             logout:
-                path: security_logout
-                target: /
+                path: app_logout
+                target: tricks_all
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
