--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     upload_directory: '%kernel.project_dir%/public/uploads'
+    fixtures_directory: '%kernel.project_dir%/src/DataFixtures'
 
 services:
     # default configuration for services in *this* file
@@ -24,6 +25,16 @@ services:
 
     App\Service\FileUploader:
         arguments:
+            $uploadDirectory: '%upload_directory%'
+
+    App\DataFixtures\PictureFixtures:
+        arguments:
+            $fixturesDirectory: '%fixtures_directory%'
+            $uploadDirectory: '%upload_directory%'
+
+    App\DataFixtures\UserFixtures:
+        arguments:
+            $fixturesDirectory: '%fixtures_directory%'
             $uploadDirectory: '%upload_directory%'
 
     # add more service definitions when explicit configuration is needed
