Rename FileUploader to FileManager + Update concerned files

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,7 +23,7 @@ services:
             - '../src/Kernel.php'
             - '../src/Tests/'
 
-    App\Service\FileUploader:
+    App\Service\FileManager:
         arguments:
             $uploadDirectory: '%upload_directory%'
 
